0.8.0

  * Add Temple::StaticAnalyzer to analyze Ruby expressions

0.7.8

  * Fix an warning in StaticAnalyzer

0.7.7

  * Add StaticAnalyzer, StringSplitter filters
  * Freeze string literals

0.7.6

  * EngineDSL - add support for use(:Filter) { FilterClassName }

0.7.5

  * HTML::Pretty Fix indentation issue (https://github.com/slim-template/slim-rails/issues/78)

0.7.4

  * EngineDSL: allow to replace/remove with regexp
  * Fix deprecation warning (#83)

0.7.3

  * Temple::ERB::Trimming - replace option trim_mode with trim and switch to erubis-like trimming

0.7.2

  * Remove Filters::StaticFreezer, the generator does the freezing

0.7.1

  * Rename *Hash to *Map
  * Add Filters::StaticFreezer

0.7.0

  * Drop Ruby 1.8.7 support
  * EngineDSL: Remove option filter
  * HTML: Deprecate :html4, :html5 formats
  * HTML: Add format :xml
  * Rename DefaultOptions to ClassOptions
  * Deprecate default_options in favor of options
  * Add Utils.indent_dynamic

0.6.10

  * Tilt template: Support :outvar and save/restore buffer to make the behaviour compatible with ERB

0.6.9

  * HTML::Pretty: Fix wrong line numbers
  * Tilt template: Don't overwrite buffer always
  * Generator: add preamble and postamble which do nothing
  * Tilt template: don't overwrite streaming option
  * OptionHash: inherit valid keys
  * temple/html/safe: add poor man's html_safe? implementation (not required automatically)
  * Temple::Mixins::GrammarDSL - Add some missing match? methods
  * Temple::Utils.escape_html_safe - Add parameter safe

0.6.8

  * HTML::Fast add svg doctype
  * Render standalone html 5 attributes

0.6.7

  * HTML::Pretty - change some block level tags
  * Reduce memory allocations in immutable hash

0.6.6

  * Use default encoding utf-8
  * Escape also '
  * Try to load escape_utils by default

0.6.5

  * Added Filters::CodeMerger
  * Added Filters::Encoding
  * Added Filters::RemoveBOM
  * Added Generators::ERB

0.6.4

  * Check for ActionView instead of Rails (#72)

0.6.3