@@ -2,18 +2,25 @@ module Temple
   module Filters
     # Convert [:dynamic, code] to [:static, text] if code is static Ruby expression.
     class StaticAnalyzer < Filter
-      def call(ast)
+      def call(exp)
         # Optimize only when Ripper is available.
         if ::Temple::StaticAnalyzer.available?
           super
         else
-          ast
+          exp
         end
       end
 
       def on_dynamic(code)
         if ::Temple::StaticAnalyzer.static?(code)
-          [:static, eval(code).to_s]
+          exp = [:static, eval(code).to_s]
+
+          newlines = code.count("\n")
+          if newlines == 0
+            exp
+          else
+            [:multi, exp, *newlines.times.map { [:newline] }]
+          end
         else
           [:dynamic, code]
         end
