@@ -1,6 +1,7 @@
 0.8.0
 
   * Add Temple::StaticAnalyzer to analyze Ruby expressions
+  * Support newlines in Temple::Filters::StaticAnalyzer
 
 0.7.8
 
@@ -8,7 +9,7 @@
 
 0.7.7
 
-  * Add StaticAnalyzer, StringSplitter filters
+  * Add Temple::Filters::StaticAnalyzer, Temple::Filters::StringSplitter
   * Freeze string literals
 
 0.7.6
